cassandra.h

typedef enum { cass_false = 0, cass_true = 1 } cass_bool_t;
typedef __UINT8_TYPE__ cass_uint8_t;
typedef unsigned __INT8_TYPE__ cass_uint8_t;
typedef unsigned char cass_uint8_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef __INT32_TYPE__ cass_int32_t;
typedef int cass_int32_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef __UINT64_TYPE__ cass_uint64_t;
typedef __INT64_TYPE__ cass_int64_t;
typedef unsigned __INT64_TYPE__ cass_uint64_t;
typedef long long int cass_int64_t;
typedef unsigned long long int cass_uint64_t;
typedef long long cass_int64_t;
typedef unsigned long long cass_uint64_t;
typedef cass_uint8_t cass_byte_t;
typedef struct CassInet_ {
  cass_uint8_t address[CASS_INET_V6_LENGTH];
  cass_uint8_t address_length;
} CassInet;
typedef struct CassUuid_ {
  cass_uint64_t time_and_version;
  cass_uint64_t clock_seq_and_node;
} CassUuid;
typedef struct CassStatement_ CassStatement;
typedef struct CassBatch_ CassBatch;
typedef struct CassPrepared_ CassPrepared;
typedef struct CassDataType_ CassDataType;
typedef struct CassCollection_ CassCollection;
typedef struct CassTuple_ CassTuple;
typedef struct CassUserType_ CassUserType;
typedef struct CassRetryPolicy_ CassRetryPolicy;
typedef enum CassConsistency_ {
  CASS_CONSISTENCY_UNKNOWN      = 0xFFFF,
  CASS_CONSISTENCY_ANY          = 0x0000,
  CASS_CONSISTENCY_ONE          = 0x0001,
  CASS_CONSISTENCY_TWO          = 0x0002,
  CASS_CONSISTENCY_THREE        = 0x0003,
  CASS_CONSISTENCY_QUORUM       = 0x0004,
  CASS_CONSISTENCY_ALL          = 0x0005,
  CASS_CONSISTENCY_LOCAL_QUORUM = 0x0006,
  CASS_CONSISTENCY_EACH_QUORUM  = 0x0007,
  CASS_CONSISTENCY_SERIAL       = 0x0008,
  CASS_CONSISTENCY_LOCAL_SERIAL = 0x0009,
  CASS_CONSISTENCY_LOCAL_ONE    = 0x000A
} CassConsistency;
typedef enum CassValueType_ {
  CASS_VALUE_TYPE_UNKNOWN   = 0xFFFF,
  CASS_VALUE_TYPE_CUSTOM    = 0x0000,
  CASS_VALUE_TYPE_ASCII     = 0x0001,
  CASS_VALUE_TYPE_BIGINT    = 0x0002,
  CASS_VALUE_TYPE_BLOB      = 0x0003,
  CASS_VALUE_TYPE_BOOLEAN   = 0x0004,
  CASS_VALUE_TYPE_COUNTER   = 0x0005,
  CASS_VALUE_TYPE_DECIMAL   = 0x0006,
  CASS_VALUE_TYPE_DOUBLE    = 0x0007,
  CASS_VALUE_TYPE_FLOAT     = 0x0008,
  CASS_VALUE_TYPE_INT       = 0x0009,
  CASS_VALUE_TYPE_TEXT      = 0x000A,
  CASS_VALUE_TYPE_TIMESTAMP = 0x000B,
  CASS_VALUE_TYPE_UUID      = 0x000C,
  CASS_VALUE_TYPE_VARCHAR   = 0x000D,
  CASS_VALUE_TYPE_VARINT    = 0x000E,
  CASS_VALUE_TYPE_TIMEUUID  = 0x000F,
  CASS_VALUE_TYPE_INET      = 0x0010,
  CASS_VALUE_TYPE_DATE      = 0x0011,
  CASS_VALUE_TYPE_TIME      = 0x0012,
  CASS_VALUE_TYPE_SMALL_INT = 0x0013,
  CASS_VALUE_TYPE_TINY_INT  = 0x0014,
  CASS_VALUE_TYPE_LIST      = 0x0020,
  CASS_VALUE_TYPE_MAP       = 0x0021,
  CASS_VALUE_TYPE_SET       = 0x0022,
  CASS_VALUE_TYPE_UDT       = 0x0030,
  CASS_VALUE_TYPE_TUPLE     = 0x0031,
  CASS_VALUE_TYPE_LAST_ENTRY
} CassValueType;
typedef enum CassBatchType_ {
  CASS_BATCH_TYPE_LOGGED   = 0x00,
  CASS_BATCH_TYPE_UNLOGGED = 0x01,
  CASS_BATCH_TYPE_COUNTER  = 0x02
} CassBatchType;
typedef enum CassLogLevel_ {
#define XX_LOG(log_level, _) log_level,
  CASS_LOG_LEVEL_MAP(XX_LOG)
#undef XX_LOG
  CASS_LOG_LAST_ENTRY
} CassLogLevel;
typedef enum CassError_ {
  CASS_OK = 0,
#define XX_ERROR(source, name, code, _) name = CASS_ERROR(source, code),
  CASS_ERROR_MAP(XX_ERROR)
#undef XX_ERROR
  CASS_ERROR_LAST_ENTRY
} CassError;
CASS_EXPORT CassError
cass_statement_bind_bool_by_name(CassStatement* statement,
                                 const char* name,
                                 cass_bool_t value);
CASS_EXPORT CassError
cass_statement_bind_bool_by_name_n(CassStatement* statement,
                                   const char* name,
                                   size_t name_length,
                                   cass_bool_t value);
CASS_EXPORT CassError
cass_statement_bind_string_by_name(CassStatement* statement,
                                   const char* name,
                                   const char* value);
CASS_EXPORT CassError
cass_statement_bind_string_by_name_n(CassStatement* statement,
                                     const char* name,
                                     size_t name_length,
                                     const char* value,
                                     size_t value_length);
CASS_EXPORT CassError
cass_statement_bind_bytes_by_name(CassStatement* statement,
                                  const char* name,
                                  const cass_byte_t* value,
                                  size_t value_size);
CASS_EXPORT CassError
cass_statement_bind_bytes_by_name_n(CassStatement* statement,
                                    const char* name,
                                    size_t name_length,
                                    const cass_byte_t* value,
                                    size_t value_size);
CASS_EXPORT CassError
cass_statement_bind_uuid_by_name(CassStatement* statement,
                                 const char* name,
                                 CassUuid value);
CASS_EXPORT CassError
cass_statement_bind_uuid_by_name_n(CassStatement* statement,
                                   const char* name,
                                   size_t name_length,
                                   CassUuid value);
CASS_EXPORT CassError
cass_statement_bind_inet_by_name(CassStatement* statement,
                                 const char* name,
                                 CassInet value);
CASS_EXPORT CassError
cass_statement_bind_inet_by_name_n(CassStatement* statement,
                                   const char* name,
                                   size_t name_length,
                                   CassInet value);
CASS_EXPORT CassError
cass_statement_bind_decimal_by_name(CassStatement* statement,
                                    const char* name,
                                    const cass_byte_t* varint,
                                    size_t varint_size,
                                    cass_int32_t scale);
CASS_EXPORT CassError
cass_statement_bind_decimal_by_name_n(CassStatement* statement,
                                      const char* name,
                                      size_t name_length,
                                      const cass_byte_t* varint,
                                      size_t varint_size,
                                      cass_int32_t scale);
CASS_EXPORT CassError
cass_statement_bind_collection_by_name(CassStatement* statement,
                                       const char* name,
                                       const CassCollection* collection);
CASS_EXPORT CassError
cass_statement_bind_collection_by_name_n(CassStatement* statement,
                                         const char* name,
                                         size_t name_length,
                                         const CassCollection* collection);
CASS_EXPORT CassError
cass_statement_bind_tuple_by_name(CassStatement* statement,
                                  const char* name,
                                  const CassTuple* tuple);
CASS_EXPORT CassError
cass_statement_bind_tuple_by_name_n(CassStatement* statement,
                                    const char* name,
                                    size_t name_length,
                                    const CassTuple* tuple);
CASS_EXPORT CassError
cass_statement_bind_user_type_by_name(CassStatement* statement,
                                      const char* name,
                                      const CassUserType* user_type);
CASS_EXPORT CassError
cass_statement_bind_user_type_by_name_n(CassStatement* statement,
                                        const char* name,
                                        size_t name_length,
                                        const CassUserType* user_type);
CASS_EXPORT void
cass_prepared_free(const CassPrepared* prepared);
CASS_EXPORT CassStatement*
cass_prepared_bind(const CassPrepared* prepared);
CASS_EXPORT CassError
cass_prepared_parameter_name(const CassPrepared* prepared,
                             size_t index,
                             const char** name,
                             size_t* name_length);
CASS_EXPORT const CassDataType*
cass_prepared_parameter_data_type(const CassPrepared* prepared,
                                  size_t index);
CASS_EXPORT const CassDataType*
cass_prepared_parameter_data_type_by_name(const CassPrepared* prepared,
                                          const char* name);
CASS_EXPORT const CassDataType*
cass_prepared_parameter_data_type_by_name_n(const CassPrepared* prepared,
                                            const char* name,
                                            size_t name_length);
CASS_EXPORT CassBatch*
cass_batch_new(CassBatchType type);
CASS_EXPORT void
cass_batch_free(CassBatch* batch);
CASS_EXPORT CassError
cass_batch_set_consistency(CassBatch* batch,
                           CassConsistency consistency);
CASS_EXPORT CassError
cass_batch_set_serial_consistency(CassBatch* batch,
                                  CassConsistency serial_consistency);
CASS_EXPORT CassError
cass_batch_set_timestamp(CassBatch* batch,
                         cass_int64_t timestamp);
CASS_EXPORT CassError
cass_batch_set_retry_policy(CassBatch* batch,
                            CassRetryPolicy* retry_policy);
CASS_EXPORT CassError
cass_batch_add_statement(CassBatch* batch,
                         CassStatement* statement);
CASS_EXPORT CassDataType*
cass_data_type_new(CassValueType type);
CASS_EXPORT CassDataType*
cass_data_type_new_from_existing(const CassDataType* data_type);
CASS_EXPORT CassDataType*
cass_data_type_new_tuple(size_t item_count);
CASS_EXPORT CassDataType*
cass_data_type_new_udt(size_t field_count);
CASS_EXPORT void
cass_data_type_free(CassDataType* data_type);
CASS_EXPORT CassValueType
cass_data_type_type(const CassDataType* data_type);
CASS_EXPORT CassError
cass_data_type_type_name(const CassDataType* data_type,
                         const char** type_name,
                         size_t* type_name_length);
CASS_EXPORT CassError
cass_data_type_set_type_name(CassDataType* data_type,
                             const char* type_name);
CASS_EXPORT CassError
cass_data_type_set_type_name_n(CassDataType* data_type,
                               const char* type_name,
                               size_t type_name_length);
CASS_EXPORT CassError
cass_data_type_keyspace(const CassDataType* data_type,
                        const char** keyspace,
                        size_t* keyspace_length);
CASS_EXPORT CassError
cass_data_type_set_keyspace(CassDataType* data_type,
                            const char* keyspace);
CASS_EXPORT CassError
cass_data_type_set_keyspace_n(CassDataType* data_type,
                              const char* keyspace,
                              size_t keyspace_length);
CASS_EXPORT CassError
cass_data_type_class_name(const CassDataType* data_type,
                          const char** class_name,
                          size_t* class_name_length);
CASS_EXPORT CassError
cass_data_type_set_class_name(CassDataType* data_type,
                              const char* class_name);
CASS_EXPORT CassError
cass_data_type_set_class_name_n(CassDataType* data_type,
                                const char* class_name,
                                size_t class_name_length);
CASS_EXPORT const CassDataType*
cass_data_type_sub_data_type(const CassDataType* data_type,
                             size_t index);
CASS_EXPORT const CassDataType*
cass_data_type_sub_data_type_by_name(const CassDataType* data_type,
                                     const char* name);
CASS_EXPORT const CassDataType*
cass_data_type_sub_data_type_by_name_n(const CassDataType* data_type,
                                       const char* name,
                                       size_t name_length);
CASS_EXPORT CassError
cass_data_type_sub_type_name(const CassDataType* data_type,
                             size_t index,
                             const char** name,
                             size_t* name_length);
CASS_EXPORT CassError
cass_data_type_add_sub_type(CassDataType* data_type,
                            const CassDataType* sub_data_type);