src/cassandra.rs

    pub fn cass_statement_bind_bool_by_name(statement: *mut CassStatement,
                                            name: *const ::libc::c_char,
                                            value: cass_bool_t) -> CassError;
    pub fn cass_statement_bind_bool_by_name_n(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: cass_bool_t)
     -> CassError;
    pub fn cass_statement_bind_string_by_name(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              value: *const ::libc::c_char)
     -> CassError;
    pub fn cass_statement_bind_string_by_name_n(statement: *mut CassStatement,
                                                name: *const ::libc::c_char,
                                                name_length: size_t,
                                                value: *const ::libc::c_char,
                                                value_length: size_t)
     -> CassError;
    pub fn cass_statement_bind_bytes_by_name(statement: *mut CassStatement,
                                             name: *const ::libc::c_char,
                                             value: *const cass_byte_t,
                                             value_size: size_t) -> CassError;
    pub fn cass_statement_bind_bytes_by_name_n(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               value: *const cass_byte_t,
                                               value_size: size_t)
     -> CassError;
    pub fn cass_statement_bind_uuid_by_name(statement: *mut CassStatement,
                                            name: *const ::libc::c_char,
                                            value: CassUuid) -> CassError;
    pub fn cass_statement_bind_uuid_by_name_n(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: CassUuid) -> CassError;
    pub fn cass_statement_bind_inet_by_name(statement: *mut CassStatement,
                                            name: *const ::libc::c_char,
                                            value: CassInet) -> CassError;
    pub fn cass_statement_bind_inet_by_name_n(statement: *mut CassStatement,
                                              name: *const ::libc::c_char,
                                              name_length: size_t,
                                              value: CassInet) -> CassError;
    pub fn cass_statement_bind_decimal_by_name(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               varint: *const cass_byte_t,
                                               varint_size: size_t,
                                               scale: cass_int32_t)
     -> CassError;
    pub fn cass_statement_bind_decimal_by_name_n(statement:
                                                     *mut CassStatement,
                                                 name: *const ::libc::c_char,
                                                 name_length: size_t,
                                                 varint: *const cass_byte_t,
                                                 varint_size: size_t,
                                                 scale: cass_int32_t)
     -> CassError;
    pub fn cass_statement_bind_collection_by_name(statement:
                                                      *mut CassStatement,
                                                  name: *const ::libc::c_char,
                                                  collection:
                                                      *const CassCollection)
     -> CassError;
    pub fn cass_statement_bind_collection_by_name_n(statement:
                                                        *mut CassStatement,
                                                    name:
                                                        *const ::libc::c_char,
                                                    name_length: size_t,
                                                    collection:
                                                        *const CassCollection)
     -> CassError;
    pub fn cass_statement_bind_tuple_by_name(statement: *mut CassStatement,
                                             name: *const ::libc::c_char,
                                             tuple: *const CassTuple)
     -> CassError;
    pub fn cass_statement_bind_tuple_by_name_n(statement: *mut CassStatement,
                                               name: *const ::libc::c_char,
                                               name_length: size_t,
                                               tuple: *const CassTuple)
     -> CassError;
    pub fn cass_statement_bind_user_type_by_name(statement:
                                                     *mut CassStatement,
                                                 name: *const ::libc::c_char,
                                                 user_type:
                                                     *const CassUserType)
     -> CassError;
    pub fn cass_statement_bind_user_type_by_name_n(statement:
                                                       *mut CassStatement,
                                                   name:
                                                       *const ::libc::c_char,
                                                   name_length: size_t,
                                                   user_type:
                                                       *const CassUserType)
     -> CassError;
    pub fn cass_prepared_free(prepared: *const CassPrepared) -> ();
    pub fn cass_prepared_bind(prepared: *const CassPrepared)
     -> *mut CassStatement;
    pub fn cass_prepared_parameter_name(prepared: *const CassPrepared,
                                        index: size_t,
                                        name: *mut *const ::libc::c_char,
                                        name_length: *mut size_t)
     -> CassError;
    pub fn cass_prepared_parameter_data_type(prepared: *const CassPrepared,
                                             index: size_t)
     -> *const CassDataType;
    pub fn cass_prepared_parameter_data_type_by_name(prepared:
                                                         *const CassPrepared,
                                                     name:
                                                         *const ::libc::c_char)
     -> *const CassDataType;
    pub fn cass_prepared_parameter_data_type_by_name_n(prepared:
                                                           *const CassPrepared,
                                                       name:
                                                           *const ::libc::c_char,
                                                       name_length: size_t)
     -> *const CassDataType;
    pub fn cass_batch_new(_type: CassBatchType) -> *mut CassBatch;
    pub fn cass_batch_free(batch: *mut CassBatch) -> ();
    pub fn cass_batch_set_consistency(batch: *mut CassBatch,
                                      consistency: CassConsistency)
     -> CassError;
    pub fn cass_batch_set_serial_consistency(batch: *mut CassBatch,
                                             serial_consistency:
                                                 CassConsistency)
     -> CassError;
    pub fn cass_batch_set_timestamp(batch: *mut CassBatch,
                                    timestamp: cass_int64_t) -> CassError;
    pub fn cass_batch_set_retry_policy(batch: *mut CassBatch,
                                       retry_policy: *mut CassRetryPolicy)
     -> CassError;
    pub fn cass_batch_add_statement(batch: *mut CassBatch,
                                    statement: *mut CassStatement)
     -> CassError;
    pub fn cass_data_type_new(_type: CassValueType) -> *mut CassDataType;
    pub fn cass_data_type_new_from_existing(data_type: *const CassDataType)
     -> *mut CassDataType;
    pub fn cass_data_type_new_tuple(item_count: size_t) -> *mut CassDataType;
    pub fn cass_data_type_new_udt(field_count: size_t) -> *mut CassDataType;
    pub fn cass_data_type_free(data_type: *mut CassDataType) -> ();
    pub fn cass_data_type_type(data_type: *const CassDataType)
     -> CassValueType;
    pub fn cass_data_type_type_name(data_type: *const CassDataType,
                                    type_name: *mut *const ::libc::c_char,
                                    type_name_length: *mut size_t)
     -> CassError;
    pub fn cass_data_type_set_type_name(data_type: *mut CassDataType,
                                        type_name: *const ::libc::c_char)
     -> CassError;
    pub fn cass_data_type_set_type_name_n(data_type: *mut CassDataType,
                                          type_name: *const ::libc::c_char,
                                          type_name_length: size_t)
     -> CassError;
    pub fn cass_data_type_keyspace(data_type: *const CassDataType,
                                   keyspace: *mut *const ::libc::c_char,
                                   keyspace_length: *mut size_t) -> CassError;
    pub fn cass_data_type_set_keyspace(data_type: *mut CassDataType,
                                       keyspace: *const ::libc::c_char)
     -> CassError;
    pub fn cass_data_type_set_keyspace_n(data_type: *mut CassDataType,
                                         keyspace: *const ::libc::c_char,
                                         keyspace_length: size_t)
     -> CassError;
    pub fn cass_data_type_class_name(data_type: *mut CassDataType,
                                     class_name: *mut *const ::libc::c_char,
                                     class_name_length: *mut size_t)
     -> CassError;
    pub fn cass_data_type_set_class_name(data_type: *mut CassDataType,
                                         class_name: *const ::libc::c_char)
     -> CassError;
    pub fn cass_data_type_set_class_name_n(data_type: *mut CassDataType,
                                           class_name: *const ::libc::c_char,
                                           class_name_length: size_t)
     -> CassError;
    pub fn cass_data_type_sub_data_type(data_type: *const CassDataType,
                                        index: size_t) -> *const CassDataType;
    pub fn cass_data_type_sub_data_type_by_name(data_type:
                                                    *const CassDataType,
                                                name: *const ::libc::c_char)
     -> *const CassDataType;
    pub fn cass_data_type_sub_data_type_by_name_n(data_type:
                                                      *const CassDataType,
                                                  name: *const ::libc::c_char,
                                                  name_length: size_t)
     -> *const CassDataType;
    pub fn cass_data_type_sub_type_name(data_type: *const CassDataType,
                                        index: size_t,
                                        name: *mut *const ::libc::c_char,
                                        name_length: *mut size_t)
     -> CassError;
    pub fn cass_data_type_add_sub_type(data_type: *mut CassDataType,
                                       sub_data_type: *const CassDataType)
     -> CassError;
